# Schema_Surgeon_OpenEnv_Meta

./: .dockerignore  .gitignore  Dockerfile  README.md  README2.md  inference.py  openenv.yaml  requirements.txt
.github/: copilot-instructions.md
SchemaSurgeon/: README.md  __init__.py  client.py  generate_data.py  idea.md  inference.py  models.py  openenv.yaml  pyproject.toml
SchemaSurgeon/openenv_SchemaSurgeon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
SchemaSurgeon/server/: Dockerfile  SchemaSurgeon_environment.py  actions.py  grader.py  requirements.txt  tasks.py
SchemaSurgeon/server/data/: task1.json  task2.json  task3.json
server/: SchemaSurgeon_environment.py  __init__.py  actions.py  app.py  grader.py  obs.py  requirements.txt
server/data/: task1.json  task2.json  task3.json
